# sphinx-pyodide

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: docs.yml  python-publish.yml  unit-tests.yml
docs/source/: changelog.rst  conf.py  index.rst
src/sphinx_pyodide/: __init__.py  main.py  sphinx_pyodide.css  sphinx_pyodide.js
tests/: conftest.py  test_build.py  test_directive.py
tests/roots/test-pyodide/: README.md  conf.py  index.rst
tests/roots/test-pyodide-globals/: conf.py  index.rst
