[project]
name = "sphinx-pyodide"
description = "Sphinx extension to add pyodide directive"
readme = "README.md"
authors = [
    { name = "Rebecca Sutton Koeser", email = "rebecca.s.koeser@princeton.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "docutils>=0.20",
    "pygments>=2.19.2",
    "sphinx>=8.0.0",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
]
docs = [
    "numpy>=2.2.6",
    "pytz>=2026.2",
]
dev = [
    "furo>=2025.12.19",
    "sphinx-autobuild>=2025.8.25; python_version >= '3.11'",
    "ty",
    { include-group = "test" },
    { include-group = "docs" },
]

[tool.hatch.version]
path = "src/sphinx_pyodide/__init__.py"

[tool.ruff.lint]
# Include these rules in addition to ruff's defaults
extend-select = [
  "ANN",  # flake8-annotations
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "D1",   # pydocstyle: undocumented
  "D201", # pydocstyle: blank-line-before-function
  "D209", # pydocstyle: new-line-after-last-paragraph
  "D213", # pydocstyle: multi-line-summary-second-line
  "D403", # pydocstyle: first-word-uncapitalized
  "D419", # pydocstyle: empty-docstring
  "I",    #isort
  "NPY",  # numpy-specific rules
  "PERF", # perflint
  "PTH",  # flake8-use-pathlib
  "RUF",  # ruff-specific rules
  "SIM",  # flake8-simplify
  "UP",   # pyupgrade
]

[tool.mdformat]
number = true
